# OpenWolf-Engine

./: .gitignore  CMakeLists.txt
cmake/: FindSDL2NET.cmake
src/: astyle-code.bat  astyle-code.sh  astyle-options.ini
src/engine/API/: CVarSystem_api.h  CmdBuffer_api.h  CmdSystem_api.h  FileSystem_api.h  Memory_api.h  NetworkChain_api.h  Parse_api.h  bgame_api.h  cgame_api.h  clientAVI_api.h  clientGUI_api.h  clientGame_api.h  clientKeys_api.h  clientLAN_api.h  clientMain_api.h  clientParse_api.h  cm_api.h  consoleHistory_api.h  gui_api.h  network_api.h  renderer_api.h  serverCrypto_api.h  serverDemo_api.h  serverGame_api.h  serverInit_api.h  serverMain_api.h  serverWorld_api.h  sgame_api.h  sound_api.h  systemThreads_api.h  system_api.h  threads_api.h
src/engine/audio/: s_adpcm.cpp  s_codec.cpp  s_codec.h  s_codec_ogg.cpp  s_codec_wav.cpp  s_dma.cpp  s_dmahd.cpp  s_dmahd.h  s_local.h  s_main.cpp  s_mem.cpp  s_mix.cpp  s_openal.cpp  s_wavelet.cpp
src/engine/client/: cl_cin.cpp  cl_console.cpp  cl_input.cpp  client.h  clientAVI.cpp  clientAVI.h  clientBrowser.cpp  clientBrowser.h  clientGUI.cpp  clientGame.cpp  clientGame.h  clientKeys.cpp  clientKeys.h  clientLAN.cpp  clientLAN.h  clientMain.cpp  clientMain.h  clientNetworkChain.cpp  clientNetworkChain.h  clientParse.cpp  clientParse.h  clientScreen.cpp  clientScreen.h  keys.h
src/engine/cm/: cm_load_tech3.cpp  cm_local.h  cm_patch.cpp  cm_patch.h  cm_polylib.cpp  cm_polylib.h  cm_test.cpp  cm_trace.cpp  cm_trisoup.cpp
src/engine/console/: consoleCurses.cpp  consoleLogging.cpp
src/engine/download/: downloadLocal.h  downloadMain.cpp
src/engine/framework/: CVarSystem.cpp  CVarSystem.h  CmdBuffer.cpp  CmdDelay.cpp  CmdSystem.cpp  CmdSystem.h  ConsoleHistory.cpp  ConsoleHistory.h  FileSystem.cpp  FileSystem.h  Huffman.cpp  IOAPI.cpp  LibraryTemplates.hpp  MD4.cpp  Memory.cpp  Memory.h  Network.cpp  Network.h  NetworkChain.cpp  NetworkChain.h  Parse.cpp  Parse.h  Puff.cpp  SurfaceFlags_Tech3.h  Threads.cpp  Threads.h  Unzip.cpp  keycodes.h  precompiled.h  types.h
src/engine/null/: null_autoprecompiled.h  null_client.cpp  null_serverprecompiled.cpp  null_serverprecompiled.h
src/engine/platform/: engineMain.def  systemInput.cpp  systemLauncher.cpp  systemLocal.h  systemMain.cpp  systemSound.cpp  systemThreads.cpp  systemThreads.h
src/engine/platform/Linux/: systemUnix.cpp
src/engine/platform/Windows/: systemWindows.cpp
src/engine/qcommon/: common.cpp  msg.cpp  q_math.cpp  q_platform.h  q_shared.cpp  q_shared.h  qcommon.h  qfiles.h
src/engine/renderSystem/: iqm.h  qgl.h  r_allocator.cpp  r_allocator.h  r_animation.cpp  r_animation.h  r_api.cpp  r_backend.cpp  r_backend.h  r_bsp_tech3.cpp  r_bsp_tech3.h  r_cmds.cpp  r_cmds.h  r_cmdsTemplate.hpp  r_common.h  r_curve.cpp  r_curve.h  r_dsa.cpp  r_dsa.h  r_extensions.cpp  r_extensions.h  r_extramath.cpp  r_extramath.h  r_extratypes.h  r_fbo.cpp  r_fbo.h  r_flares.cpp  r_flares.h  r_font.cpp  r_font.h  r_glimp.cpp  r_glimp.h  r_glsl.cpp  r_glsl.h  r_glsl_parse.cpp  r_glsl_parse.h  r_image.cpp  r_image.h  r_image_dds.cpp  r_image_dds.h  (+47 more)
src/engine/renderSystem/renderProgs/: contrast.fragment  depthOfField.fragment  dlight.fragment  dlight.vertex  generic.fragment  lensflare.fragment  lightall.fragment  lightall.vertex  multipost.fragment  prefilterEnvMap.vertex  rbm.fragment  shadowmask.vertex  ssgi.fragment  ssr.fragment  sss.fragment  sss.vertex  sun.fragment  sun.vertex  textureclean.fragment  tonemap.vertex  truehdr.fragment  underwater.vertex  vibrancy.vertex
src/engine/server/: server.h  serverCcmds.cpp  serverClient.cpp  serverClient.h  serverCrypto.cpp  serverDemo.cpp  serverGame.cpp  serverInit.cpp  serverMain.cpp  serverNetChan.cpp  serverOACS.cpp  serverOACS.h  serverSnapshot.cpp  serverSnapshot.h  serverWallhack.cpp  serverWorld.cpp
src/libs/freetype/include/freetype2/freetype/config/: ftconfig.h
src/libs/libjpeg/include/: jpegint.h
src/libs/pdcurses/include/: curses.h
src/tools/master/: clients.cpp  common.cpp  dpmaster.cpp  games.cpp  games.h  messages.cpp  servers.cpp  system.cpp
src/tools/owmap/: assets_loader.cpp  assets_loader.hpp  bbox.cpp  brush.cpp  brush_primit.cpp  bsp.cpp  bsp_analyze.cpp  bsp_info.cpp  bsp_scale.cpp  bspfile.h  bspfile_abstract.cpp  bspfile_abstract.h  bspfile_ibsp.cpp  bspfile_obsp.cpp  bspfile_rbsp.cpp  cmdlib.cpp  cmdlib.h  convert_ase.cpp  convert_bsp.cpp  convert_map.cpp  convert_obj.cpp  ddslib.cpp  ddslib.h  decals.cpp  etclib.cpp  exportents.cpp  facebsp.cpp  filematch.cpp  filematch.h  fixaas.cpp  fog.cpp  game__null.h  game_darkplaces.h  game_dq.h  game_ef.h  game_etut.h  game_ja.h  game_jk2.h  game_nexuiz.h  game_prophecy.h  (+63 more)
src/tools/owmap/libs/picomodel/src/: picomodel.c  picomodel.h  pm_ase.c  pm_md3.c
